# fastapi-disconnect-example

./: README.md  pyproject.toml
fastapi_disconnect_example/: api.py  middleware.py
