[tool.poetry]
name = "fastapi-disconnect-example"
version = "0.1.0"
description = ""
authors = ["Sergen Pekşen <speksen@kb01.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
granian = "^1.3.1"
uvicorn = "^0.29.0"
hypercorn = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
